--- a/hao.html
+++ b/hao.html
@@ -1,11 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <style>
+        div {
+            width: 66px;
+            height: 99px;
+            background-color: red;
+        }
+    </style>
 </head>
+
 <body>
-<div></div>
-<p>你好，时间</p>
+    <div></div>
+    <p>你好，时间</p>
 </body>
+
 </html>
